Switch from libusb to hidapi
Signed-off-by: TheJackiMonster <thejackimonster@gmail.com>

--- a/interface_lib/CMakeLists.txt
+++ b/interface_lib/CMakeLists.txt
@@ -3,9 +3,7 @@ project(nrealAirLibrary C)
 
 set(CMAKE_C_STANDARD 17)
 
-find_package(PkgConfig REQUIRED)
-pkg_search_module(LIBUSB1 REQUIRED libusb-1.0)
-
+find_package(hidapi REQUIRED)
 find_package(json-c REQUIRED)
 
 add_library(
@@ -20,11 +18,11 @@ target_include_directories(nrealAirLibrary
 )
 
 target_include_directories(nrealAirLibrary
-		SYSTEM BEFORE PRIVATE ${FUSION_INCLUDE_DIR} ${LIBUSB1_INCLUDE_DIRS}
+		SYSTEM BEFORE PRIVATE ${FUSION_INCLUDE_DIR}
 )
 
 target_link_libraries(nrealAirLibrary
-		${LIBUSB1_LIBRARIES} json-c::json-c ${FUSION_LIBRARY} m
+		hidapi::hidapi json-c::json-c ${FUSION_LIBRARY} m
 )
 
 set(NRA_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
