Move hidapi to submodule, move Fusion library to same level, add fpic flags
Copied from pull request on original repo: https://gitlab.com/TheJackiMonster/nrealAirLinuxDriver/-/commit/7e3bf5b01789f3ba34ee123bb4fb4d39d048e583

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "modules/Fusion"]
-	path = modules/Fusion
+[submodule "interface_lib/Fusion"]
+	path = interface_lib/Fusion
 	url = https://github.com/TheJackiMonster/Fusion.git
+[submodule "interface_lib/hidapi"]
+	path = interface_lib/hidapi
+	url = https://github.com/libusb/hidapi.git
