--- a/interface_lib/CMakeLists.txt
+++ b/interface_lib/CMakeLists.txt
@@ -3,8 +3,12 @@ project(nrealAirLibrary C)
 
 set(CMAKE_C_STANDARD 17)
 
-find_package(hidapi REQUIRED)
-find_package(json-c REQUIRED)
+add_subdirectory(hidapi)
+find_package(json-c REQUIRED CONFIG)
+
+add_subdirectory(Fusion/Fusion)
+set(FUSION_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/interface_lib/Fusion)
+set(FUSION_LIBRARY Fusion)
 
 add_library(
 		nrealAirLibrary
@@ -13,16 +17,18 @@ add_library(
 		src/device4.c
 )
 
+target_compile_options(nrealAirLibrary PRIVATE -fPIC)
+
 target_include_directories(nrealAirLibrary
 		BEFORE PUBLIC include
 )
 
 target_include_directories(nrealAirLibrary
-		SYSTEM BEFORE PRIVATE ${FUSION_INCLUDE_DIR}
+		BEFORE PRIVATE ${FUSION_INCLUDE_DIR}
 )
 
 target_link_libraries(nrealAirLibrary
-		hidapi::hidapi json-c::json-c ${FUSION_LIBRARY} m
+		PRIVATE hidapi::hidapi json-c::json-c ${FUSION_LIBRARY}
 )
 
 set(NRA_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
