Change all naming to XREAL
https://github.com/wheaney/xrealAirLinuxDriver/issues/1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(nrealAirLinuxDriver C)
+project(xrealAirLinuxDriver C)
 
 set(CMAKE_C_STANDARD 17)
 
@@ -9,18 +9,18 @@ find_package(LIBEVDEV REQUIRED)
 add_subdirectory(interface_lib)
 add_subdirectory(examples)
 
-add_executable(nrealAirLinuxDriver
+add_executable(xrealAirLinuxDriver
 		src/driver.c
 )
 
-target_include_directories(nrealAirLinuxDriver
+target_include_directories(xrealAirLinuxDriver
 		SYSTEM BEFORE PRIVATE ${FUSION_INCLUDE_DIR} ${LIBEVDEV_INCLUDE_DIRS}
 )
 
-target_include_directories(nrealAirLinuxDriver
-		BEFORE PUBLIC ${NRA_INCLUDE_DIR}
+target_include_directories(xrealAirLinuxDriver
+		BEFORE PUBLIC ${XREAL_AIR_INCLUDE_DIR}
 )
 
-target_link_libraries(nrealAirLinuxDriver
-		PRIVATE ${NRA_LIBRARY} ${FUSION_LIBRARY} ${LIBEVDEV_LIBRARIES}
+target_link_libraries(xrealAirLinuxDriver
+		PRIVATE ${XREAL_AIR_LIBRARY} ${FUSION_LIBRARY} ${LIBEVDEV_LIBRARIES}
 )
