--- a/examples/debug_d3/CMakeLists.txt
+++ b/examples/debug_d3/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 3.16)
-project(nrealAirDebugD3 C)
+project(xrealAirDebugD3 C)
 
 set(CMAKE_C_STANDARD 17)
 
 add_executable(
-		nrealAirDebugD3
+		xrealAirDebugD3
 		src/debug.c
 )
 
-target_include_directories(nrealAirDebugD3
-		BEFORE PUBLIC ${NRA_INCLUDE_DIR}
+target_include_directories(xrealAirDebugD3
+		BEFORE PUBLIC ${XREAL_AIR_INCLUDE_DIR}
 )
 
-target_link_libraries(nrealAirDebugD3
-		${NRA_LIBRARY}
+target_link_libraries(xrealAirDebugD3
+		${XREAL_AIR_LIBRARY}
 )
