Update copying of driver binary to the user's home directory (was /usr/bin)
Disabling of SteamOS readonly file-system no longer necessary

--- a/systemd/xreal-air-driver.service
+++ b/systemd/xreal-air-driver.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/bin/bash -c 'HOME={user_home} /usr/bin/xrealAirLinuxDriver'
+ExecStart=/bin/bash -c 'HOME={user_home} {user_home}/bin/xrealAirLinuxDriver'
 Restart=on-failure
 
 [Install]
