Go back to original driver submodule repo
Fusion library no longer being used

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "modules/xrealInterfaceLibrary"]
 	path = modules/xrealInterfaceLibrary
-	url = git@gitlab.com:wheaney/nrealAirLinuxDriver.git
+	url = git@gitlab.com:TheJackiMonster/nrealAirLinuxDriver.git
+	branch = main
