Send the remaining IPC values, move XREAL-specific device settings to its own header file, switch to forked module to get new fusion convention for quaternion usage

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "modules/xrealInterfaceLibrary"]
 	path = modules/xrealInterfaceLibrary
-	url = git@gitlab.com:TheJackiMonster/nrealAirLinuxDriver.git
-	branch = main
+	url = git@gitlab.com:wheaney/nrealAirLinuxDriver.git
+	branch = change_convention
