Separate device driver functions from device properties and set HID IDs in properties to better support cases where one driver supports multiple devices (e.g. XREAL), add proper transformation of VITURE quaternions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(xrealAirLinuxDriver
 		src/config.c
 		src/driver.c
 		src/files.c
+		src/imu.c
 		src/ipc.c
 		src/multitap.c
 		src/outputs.c
