Pull in original axes conventions from base XREAL driver, add logic to convert to NWU, fix how that translates to mouse/joystick movements

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "modules/xrealInterfaceLibrary"]
 	path = modules/xrealInterfaceLibrary
 	url = git@gitlab.com:wheaney/nrealAirLinuxDriver.git
-	branch = xreal_air_pro
+	branch = main
