Initial plugins implementation with sideview

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ add_executable(xrealAirLinuxDriver
 		src/ipc.c
 		src/multitap.c
 		src/outputs.c
+		src/plugins.c
+		src/sideview_plugin.c
 		src/state.c
 		src/strings.c
 		src/viture.c
