Pull base configs, connected device properties, and driver state into a runtime context
Context can be accessed globally so they don't need to be passed around everywhere

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(xrealAirLinuxDriver
 		src/multitap.c
 		src/outputs.c
 		src/plugins.c
+		src/runtime_context.c
 		src/sideview_plugin.c
 		src/state.c
 		src/strings.c
