Standardize feature access, fix virtual display issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,8 @@ add_executable(xrealAirLinuxDriver
 		src/devices/viture.c
 		src/devices/xreal.c
 		src/driver.c
+		src/features/smooth_follow.c
+		src/features/sbs.c
 		src/files.c
 		src/imu.c
 		src/ipc.c
