Move to EU server, handle case here no license file exists and it fails to download, other small fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ set_target_properties(
 add_executable(xrealAirLinuxDriver
 		src/buffer.c
 		src/config.c
+		src/curl.c
 		src/devices/viture.c
 		src/devices/xreal.c
 		src/driver.c
