--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "modules/xrealInterfaceLibrary"]
 	path = modules/xrealInterfaceLibrary
-	url = git@gitlab.com:TheJackiMonster/nrealAirLinuxDriver.git
+	url = https://gitlab.com/TheJackiMonster/nrealAirLinuxDriver.git
 	branch = main
