Fix service for Fedora distros
Moving the environment variable into the `ExecStart` line seems to make this work on Fedora (specifically Bazzite).

--- a/systemd/xreal-air-driver.service
+++ b/systemd/xreal-air-driver.service
@@ -4,8 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-Environment=HOME={user_home}
-ExecStart={user_home}/bin/xrealAirLinuxDriver
+ExecStart=env HOME={user_home} {user_home}/bin/xrealAirLinuxDriver
 Restart=on-failure
 
 [Install]
