--- a/systemd/xreal-air-driver.service
+++ b/systemd/xreal-air-driver.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 Environment=HOME={user_home}
-ExecStart={user_home}/bin/xrealAirLinuxDriver
+ExecStart=/bin/bash -c {user_home}/bin/xrealAirLinuxDriver
 Restart=on-failure
 
 [Install]
