Update build process to support both the standard driver and the Breezy driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,11 @@ else()
   message(STATUS "!!! UA_API_SECRET is NOT set")
 endif()
 
+if(DEFINED ENV{BREEZY_DESKTOP})
+  message(STATUS "Breezy Desktop build")
+  set(BREEZY_DESKTOP $ENV{BREEZY_DESKTOP})
+endif()
+
 file(READ ${CMAKE_CURRENT_SOURCE_DIR}/license_public_key.pem DEVICE_LICENSE_PUBLIC_KEY_RAW)
 string(REPLACE "\n" "\\n" DEVICE_LICENSE_PUBLIC_KEY_ESCAPED ${DEVICE_LICENSE_PUBLIC_KEY_RAW})
 add_definitions(-DDEVICE_LICENSE_PUBLIC_KEY="${DEVICE_LICENSE_PUBLIC_KEY_ESCAPED}")
