Refactor to utilize libusb, don't always hold open device connections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ set(SOURCES
     src/curl.c
     src/devices/viture.c
     src/devices/xreal.c
+    src/devices.c
     src/driver.c
     src/features/breezy_desktop.c
     src/features/smooth_follow.c
