--- a/systemd/xreal-air-driver.service
+++ b/systemd/xreal-air-driver.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=XREAL Air user-space driver
+Description=XR user-space driver
 After=network.target
 
 [Service]
 Type=simple
 Environment=HOME={user_home}
+Environment=LD_LIBRARY_PATH={ld_library_path}
 ExecStart=/bin/bash -c {user_home}/bin/xrealAirLinuxDriver
 Restart=on-failure
 
