--- a/systemd/xr-driver.service
+++ b/systemd/xr-driver.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 Environment=HOME={user_home}
 Environment=LD_LIBRARY_PATH={ld_library_path}
-ExecStart=/bin/bash -c {user_home}/bin/xrealAirLinuxDriver
+ExecStart=/bin/bash -c {bin_dir}/xrDriver
 Restart=always
 
 [Install]
