--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,7 @@ set(SOURCES
     src/plugins/smooth_follow.c
     src/plugins/virtual_display.c
     src/plugins/neck_saver.c
+    src/plugins/opentrack_source.c
     src/runtime_context.c
     src/state.c
     src/strings.c
