Add opentrack listener plugin, register as non-USB device

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,7 @@ set(SOURCES
     src/plugins/virtual_display.c
     src/plugins/neck_saver.c
     src/plugins/opentrack_source.c
+    src/plugins/opentrack_listener.c
     src/runtime_context.c
     src/state.c
     src/strings.c
