--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 project(xrDriver VERSION 2.5.0 LANGUAGES C)
 
+# Emit compile_commands.json for IDEs (VS Code IntelliSense)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 configure_file(include/version.h.in version.h)
 include_directories(${PROJECT_BINARY_DIR})
 
